--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^4.0.3
   shared_preferences: ^2.0.17
+  google_nav_bar: ^5.0.6
 
 dev_dependencies:
   flutter_test:
