--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   google_fonts: ^4.0.3
   shared_preferences: ^2.0.17
   google_nav_bar: ^5.0.6
-  hive: ^2.2.3
+  objectbox: ^1.7.2
 
 dev_dependencies:
   flutter_test:
