--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,10 @@
 {
     "cSpell.words": [
+        "circlepath",
         "Cupertino",
         "lato",
         "smartwallet",
-        "sublist"
+        "sublist",
+        "twoday"
     ]
 }
