export to pdf feature added

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "circlepath",
         "Cupertino",
         "lato",
+        "Schyler",
         "smartwallet",
         "sublist",
         "twoday"
