--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.2 <3.0.0'
+  sdk: '>=3.1.0 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -41,6 +41,9 @@ dependencies:
   google_nav_bar: ^5.0.6
   hive_flutter: ^1.1.0
   intl: ^0.18.0
+  pdf: ^3.10.4
+  file_picker: ^5.3.3
+  permission_handler: ^10.4.3
 
 dev_dependencies:
   flutter_test:
@@ -68,7 +71,6 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
-    - assets/darktheme/
     - assets/animated/
   #   - images/a_dot_ham.jpeg
 
